# simple_shell

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  build_standalone.bat  create_shortcut.ps1  download_icon.ps1  install_linux.sh  install_windows.ps1  run_modern_ui.bat  run_shell.bat
build_standalone/: CTestTestfile.cmake  Makefile
docs/: ARABIC_SUPPORT_GUIDE.md  BAA_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_TASKS.md  DOCUMENTATION_INDEX.md  PROJECT_STATUS.md  ROADMAP.md
include/: shell.h
src/: builtin.c  environ.c  getLine.c  getenv.c  getinfo.c  history.c  lists.c  locale.c  main.c  shell.manifest  shell.rc  shell_entry.c  shell_loop.c  string1.c  utf8.c  utf8_output.c  vars.c  win_main.c
